@@ -1,4 +1,7 @@
 3.4
+	+ Don't allow domain names as target of failover tests, usability
+	  changes in failover rules
+	+ Removed DNS resolution failover test
 	+ Added flag to notify when an ifup is set
 	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
 	+ Implement replicationExcludeKeys() to avoid replication of ifaces in HA
